--- a/src/stylesheets.css
+++ b/src/stylesheets.css
@@ -31,8 +31,11 @@ body {
 }
 
 .white-block__body {
+    display: flex;
+    flex-direction: column;
     position: relative;
     padding: 86px;
+    width: 650px;
 }
 
 .white-block__body__loading-block {
@@ -41,17 +44,21 @@ body {
     align-items: center;
     position: relative;
 
+    width: 100%;
+    height: 28px;
+    line-height: 1.2;
+
     background-image: -moz-linear-gradient( -90deg, rgb(215,215,215) 0%, rgb(255,255,255) 100%);
     background-image: -webkit-linear-gradient( -90deg, rgb(215,215,215) 0%, rgb(255,255,255) 100%);
     background-image: -ms-linear-gradient( -90deg, rgb(215,215,215) 0%, rgb(255,255,255) 100%);
     box-shadow: inset 0 3px 4.9px 0.1px rgba(0, 0, 0, 0.06);
-    width: 650px;
-    height: 28px;
 }
 
 .white-block__body__loading-block__done {
     position: absolute;
     left: 0;
+    width: 80%;
+    height: 100%;
 
     background-image: -moz-linear-gradient( -180deg, rgb(119,164,248) 0%, rgba(117,161,248,.39) 100%);
     background-image:  -webkit-repeating-linear-gradient(
@@ -67,16 +74,23 @@ body {
     );
     background-image: -ms-linear-gradient( -180deg, rgb(119,164,248) 0%, rgba(117,161,248,.39) 100%);
     box-shadow: 0 8px 12px 0 rgba(133, 173, 249, 0.28);
-    width: 80%;
-    height: 100%;
 }
 
 .white-block__body__loading-block__text {
     position: absolute;
     font-size: 14px;
+    font-weight: 500;
     color: #fff;
     text-shadow: 0 2px 5px rgba(0, 0, 0, .5);
     text-transform: uppercase;
     letter-spacing: 2px;
 }
 
+.white-block__body__request-block {
+    padding: 20px 0 80px;
+    line-height: 1.55;
+}
+
+.white-block__body__request-block__text {
+    color: rgb(102, 102, 102);
+}
