--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -7,7 +7,6 @@ body {
     box-sizing: border-box;
 
     background-color: rgb(17, 27, 41);
-
 }
 
 .main-wrapper {
@@ -23,7 +22,6 @@ body {
     -ms-align-items: center;
     align-items: center;
 
-    height: 100vh;
     width: 100%;
 
     opacity: 0.851;
@@ -219,6 +217,7 @@ body {
 
 .white-block__body__confirm-block__path__accept-button {
     height: 60px;
+    margin-bottom: 50px;
 
     font-size: 14px;
     font-family: inherit;
@@ -253,7 +252,7 @@ body {
     display: none;
 
     position: absolute;
-    bottom: -1.5em;
+    bottom: 1em;
     right: 0;
 
     color: red;
@@ -305,11 +304,8 @@ body {
 }
 
 @media (max-width: 820px) {
-    .main-wrapper {
-        margin-top: 40px;
-    }
     .white-block {
-        margin: 60px 20px;
+        margin: 40px 20px;
         width: 100%;
     }
     .white-block__body {
@@ -318,12 +314,17 @@ body {
     }
     .white-block__body__confirm-block {
         line-height: 1.95;
-        margin-bottom: 20px;
     }
     .white-block__body__confirm-block__path {
         margin: 18px 0;
     }
     .warning-message {
+        bottom: 0;
         font-size: .9em;
+    }
+}
+@media (min-width: 820px) {
+    .main-wrapper {
+        height: 100vh;
     }
 }
